# BigInteger

./: .gitmodules  BigInteger.cpp  BigInteger.h  CMakeLists.txt  README.md  main.cpp  pi_calculate.cpp  pi_calculate2.cpp
BigInteger/: CMakeLists.txt
BigInteger/include/: BigFloat.h  BigInteger.h
BigInteger/src/: BigFloat.cpp  BigInteger.cpp  creation.cpp  creation_float.cpp  manipulations.cpp  manipulations_float.cpp  operators.cpp  operators_float.cpp  string_operations.cpp  string_transformations.cpp  string_transformations_float.cpp
tests/: CMakeLists.txt
tests/tests/: addition.cpp  creation.cpp  divide.cpp  fractional.cpp  functions.cpp  multiplication.cpp  subtraction.cpp
