cmake_minimum_required(VERSION 3.0)
project(BigInteger)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(BigInteger)
enable_testing()
add_subdirectory(tests)
add_executable(main main.cpp)
add_executable(pi_calculate pi_calculate.cpp)
target_link_libraries(main BigInteger)
target_link_libraries(pi_calculate BigInteger)