cmake_minimum_required(VERSION 3.0)
project(BigInteger)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
add_subdirectory(BigInteger)
enable_testing()
add_subdirectory(tests)
add_executable(main main.cpp)
add_executable(pi_calculate pi_calculate.cpp)
add_executable(pi_calculate2 pi_calculate.cpp)
target_link_libraries(main BigInteger)
target_link_libraries(pi_calculate BigInteger)
target_link_libraries(pi_calculate2 BigInteger)